# film_record_lite

./: .dockerignore  .gitignore  Dockerfile  README.md  SKILL.md  docker-compose.yaml  pyproject.toml
src/film_record_lite/: __init__.py  database.py  server.py
