[project]
name = "film-record-lite"
version = "0.1.0"
description = "A simple API tool for recording film reviews and ratings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[project.scripts]
film-record-lite = "film_record_lite.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/film_record_lite"]

[tool.hatch.build.targets.sdist]
include = ["src/film_record_lite"]